@@ -4,6 +4,10 @@
 
 - Add occasional task management to BackgroundWorker for dynamic interval tasks, Added occasional offlinecheck and occasional discord recconect attempts (closes: 13) -- kaneryu on 2025-09-21
 
+## Bugfixes
+
+- made it so the albumtype is displayed in UI -- kaneryu on 2025-09-21
+
 
 
 # Version 0.40
